--- a/client/src/forms/orderform.scss
+++ b/client/src/forms/orderform.scss
@@ -45,6 +45,13 @@
   flex: 3;
   display: flex;
   flex-direction: column;
+
+  & .sample-premium {
+    height: 37rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .sample-row {
