--- a/client/src/forms/orderform.scss
+++ b/client/src/forms/orderform.scss
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .form-content-wrapper {
@@ -75,13 +76,13 @@
 
 .basic-form input {
   flex: 1;
-  padding: 4% 2%;
+  padding: 4% 1%;
   margin: 0.6rem 0;
 }
 
 .basic-form-row input {
   flex: 1;
-  padding: 3% 2%;
+  padding: 3% 1%;
   margin: 0.6rem 1rem;
 }
 
