--- a/client/src/forms/orderform.scss
+++ b/client/src/forms/orderform.scss
@@ -99,6 +99,7 @@
   border: 0;
   color: hsl(0, 0%, 19%);
   margin: 0;
+  min-height: 2rem;
   max-height: 2rem;
   background-color: hsl(120, 55%, 63%);
   transition: background-color 100ms ease-in-out;
