--- a/client/src/forms/order.scss
+++ b/client/src/forms/order.scss
@@ -35,21 +35,26 @@
 
 .package-specifics {
   margin-top: 3rem;
+  & li {
+    font-size: 90%;
+    text-align: center;
+    font-weight: bold;
+    line-height: 1.5;
+  }
 }
 
-.package-specifics li {
-  font-size: 130%;
-  text-align: center;
-  font-weight: bold;
-  line-height: 1.5;
-}
-.package-select input {
-  background-color: white;
-  width: 100%;
-  border-radius: 0.2rem;
-  background-color: hsl(120, 55%, 63%);
-  transition: background-color 100ms ease-in-out;
-  border: none;
+.package-select {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  & input {
+    background-color: white;
+    width: 100%;
+    border-radius: 0.2rem;
+    background-color: hsl(120, 55%, 63%);
+    transition: background-color 100ms ease-in-out;
+    border: none;
+  }
 }
 
 .package-select input:active {
