--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body #root {
@@ -79,7 +80,7 @@ nav {
 }
 
 .section-title {
-  font-size: 2.5rem;
+  font-size: 220%;
   margin-top: 0;
   font-weight: bold;
   text-align: center;
