form validation with modal on error

--- a/client/src/forms/modal.scss
+++ b/client/src/forms/modal.scss
@@ -31,6 +31,15 @@
   font-size: 140%;
   text-align: center;
 }
+
+.modal-message {
+  width: 70%;
+  font-size: 150%;
+  line-height: 1.5;
+  text-align: center;
+  margin: 5rem 0;
+}
+
 .modal-text {
   width: 90%;
   max-height: 60%;
