--- a/client/src/forms/orderform.scss
+++ b/client/src/forms/orderform.scss
@@ -40,6 +40,7 @@
   justify-content: space-around;
   width: 95%;
   flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
 .sample-display {
   padding: 1%;
@@ -53,6 +54,10 @@
     align-items: center;
     justify-content: center;
   }
+}
+
+.top {
+  margin-bottom: 1rem;
 }
 
 .sample-row {
@@ -111,9 +116,9 @@
 }
 
 .checkboxes {
-  font-size: 150%;
+  font-size: 120%;
   display: flex;
-  padding: 3% 2%;
+  padding: 2% 2%;
   flex-direction: row;
   justify-content: center;
   align-items: center;
