--- a/client/src/forms/sample.scss
+++ b/client/src/forms/sample.scss
@@ -5,11 +5,18 @@
 .sample-wrapper {
   width: 11.5rem;
   height: 11.5rem;
-  margin: 0.5rem;
-  border: 0.4rem solid transparent;
+  margin: 1rem;
+  border: 0.2rem solid hsla(0, 0%, 95%, 0.7);
+  border-radius: 0.2rem;
+  padding: 1%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   & img {
     width: 100%;
   }
+  transition: border 300ms ease-in-out;
 }
 
 .selected {
