--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,6 +51,10 @@ input {
 input[type='button'],
 input[type='submit'],
 button {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: inherit;
   border: 0.1rem solid hsl(0, 0%, 90%);
   text-align: center;
