--- a/client/src/forms/platinum.scss
+++ b/client/src/forms/platinum.scss
@@ -56,6 +56,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   font-size: 140%;
   margin: 1rem auto;
